--- a/app/views/mailer/newiloi_notification.rhtml
+++ b/app/views/mailer/newiloi_notification.rhtml
@@ -2,5 +2,5 @@ A new ILoI has been posted for commentary, entitled <%= @letter.issue %>.
 
 It can be commented on at
 
-  <%= url_for :controller => 'letter', :action => 'view', :id => @letter.id, :path_only => false, :host => 'ace.heraldry.ansteorra.org' %>
+  <%= url_for :controller => 'letter', :action => 'view', :id => @letter.id, :path_only => false, :host => APP_CONFIG['host'] %>
 
