--- a/app/views/user/list.rhtml
+++ b/app/views/user/list.rhtml
@@ -6,3 +6,9 @@
 <table>
 <%= render :partial => "user", :collection => @newusers %>
 </table>
+<% if session[:user] and session[:user].admin_flag %>
+<div class="sectionheader">Archived Users</div>
+<table>
+<%= render :partial => "user", :collection => @archusers %>
+</table>
+<% end %>
