generalize credits footer

--- a/app/views/layouts/general.rhtml
+++ b/app/views/layouts/general.rhtml
@@ -56,7 +56,8 @@
   <% unless params[:view] == "iloi" or params[:view] == "icc" %>
 	    <div id="footer">
 	      <p><hr /></p>
-	      <p>ACE is a Ruby on Rails application written and maintained by HL Reis ap Tuder of Mooneschadowe.</p>
+	      <p>ACE is a Ruby on Rails application originally written by HL Reis ap Tuder of Ansteorra and maintained by Dame Elsbeth Anne Roth of AEthelmearc.<br>The code is licensed under the GPLv3 and freely available from Dame Elsbeth.</p>
+              <p>This installation is maintained by <%= kingdom['maintainer'] %>.</p>
 	      <p><a href="<%= kingdom['heralds_link']%>">College of Heralds</a> - <a href="<%= kingdom['link']%>/">Kingdom of <%= kingdom['subject'] %></a></p>
 	    </div>
 	  </td>
