--- a/app/views/user/_news.rhtml
+++ b/app/views/user/_news.rhtml
@@ -5,7 +5,7 @@
 (deleted user)
 <% end %>
 on <%= news.posted.localtime().strftime "%Y/%m/%d %H:%M:%S %Z" %>:</em>
-<% if session[:user] and session[:user].submit_flag? %>
+<% if session[:user_id] and @session_user.submit_flag? %>
 <%=  link_to "Delete", { :controller => "news", :action => "delete",
          :id => news.id }, :confirm => "Are you sure?", :method => 'post' %>
 <% end %></p>
