First part of adding upload

--- a/app/views/submission/drafts.rhtml
+++ b/app/views/submission/drafts.rhtml
@@ -1,6 +1,8 @@
 <%= link_to "New Draft", :action => "new" %>
 <%= link_to "New Letter", :controller => "letter", :action => "new" %>
+<%= link_to "Load from Oscar", :action => "upload" %>
 <div class="sectionheader">My Drafts</div>
 <%= render :partial => "draft", :collection => @drafts %>
 <%= link_to "New Draft", :action => "new" %>
 <%= link_to "New Letter", :controller => "letter", :action => "new" %>
+<%= link_to "Load from Oscar", :action => "upload" %>
